# rs-tickers

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  todo.md
crates/cli/: Cargo.toml
crates/cli/src/: input.rs  main.rs  output.rs
crates/rs-tickers/: Cargo.toml
crates/rs-tickers/src/: lib.rs  stock_quote.rs
crates/rs-tickers/src/stock_quote/: service_stooq.rs  service_yahoo.rs
example/: watchlist.json  watchlist.txt
src/: http.rs  input.rs  main.rs  stock_quote.rs
src/stock_quote/: service.rs  service_stooq.rs  service_yahoo.rs
