[package]
name = "rs-tickers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
either = "1.6.1"
once_cell = "1.9.0"
reqwest = { version = "0.11.8", features = ["blocking"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = { version = "1.0.74", features = ["raw_value"] }
