[package]
name = "cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "tickers"
path = "src/main.rs"

[dependencies]
rs-tickers = { path = "../rs-tickers" }
atty = "0.2.14"
either = "1.6.1"
once_cell = "1.9.0"
serde_json = "1.0.74"
structopt = "0.3.25"
log = "0.4.14"
env_logger = "0.9.0"
serde = "1.0.133"
